<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".task.AddTaskActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:text="@string/add_task"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_description"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextFinishBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_delay"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>
</layout>