<?xml version="1.0" encoding="utf-8"?>

<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/oneTask">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/colorGreen"
                android:text="@string/done"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorGreenLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewFinishBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_delay"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
</layout>